--- a/modulo-1-html/Clases/Clase8/03-Servicios I/styles.css
+++ b/modulo-1-html/Clases/Clase8/03-Servicios I/styles.css
@@ -47,8 +47,7 @@ p {
     height: 40px;
     border-radius: 8px;
     font-size: 1.5rem;
-    margin-bottom: 10px;
-    
+    margin-bottom: 10px;    
 }
 
 h3 {
@@ -61,3 +60,19 @@ h3 {
     color: #6c757d;
 }
 
+/* ===== Responsive ===== */
+@media (max-width: 768px) {
+    .services-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .service {
+        width: 90%; /* Ocupa casi todo el ancho */
+        text-align: center; /* Centra el contenido */
+    }
+
+    .service-icon {
+        margin: 0 auto 10px auto; /* Centra el icono */
+    }
+}
