--- a/modulo-1-html/Clases/Clase8/07-Grilla de productos/styles.css
+++ b/modulo-1-html/Clases/Clase8/07-Grilla de productos/styles.css
@@ -14,7 +14,7 @@ header h1 {
 }
 
 /* Centrar título secundario y párrafo */
-.products h2, .products p {
+.products h2, .info {
     text-align: center;
     font-size: 1.25rem;
     margin: 10px 0;
@@ -97,16 +97,20 @@ header h1 {
 
     .product-card h3, .product-card p {
         text-align: left;
-        margin-top: 0%;
+        position:relative;
         
     }
 
      /* Títulos y párrafos alineados a la izquierda */
-     header h1, .products h2 {
+     header h1, .products h2, .info {
         text-align: left;
         margin: 4%;
-       
     }
+    
+
+
+
+
 }
 
 /* Breakpoint para pantallas muy pequeñas */
