Agregar ejercicio Clase9

--- a/modulo-1-html/Clases/Clase8/05-Card Product/styles.css
+++ b/modulo-1-html/Clases/Clase8/05-Card Product/styles.css
@@ -36,13 +36,16 @@ body {
     align-items: center;
     padding: 20px;
     height: auto; 
+   
     
 }
 
 .product-header img {
     width: 100%;
-    max-width: 300px;
+    max-width: rem;
     height: auto;
+    border: solid 1px black;
+    display: block;
 }
 
 /* Contenido */
