--- a/modulo-1-html/Clases/Clase8/07-Grilla de productos/styles.css
+++ b/modulo-1-html/Clases/Clase8/07-Grilla de productos/styles.css
@@ -56,10 +56,11 @@ header h1 {
     margin-bottom: 10px;
 }
 
-.product-card p {
+.description {
     font-size: 1rem;
     color: #555;
-    margin-bottom: 5px;
+    margin-bottom: 4rem;
+    
 }
 
 /* Breakpoint para pantallas más pequeñas */
