--- a/modulo-2-html/Clases/Clase13/Modelo Card/styles.css
+++ b/modulo-2-html/Clases/Clase13/Modelo Card/styles.css
@@ -19,11 +19,12 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    transition: transform 0.3s;
+    transition: transform 1s;
+
 }
 
 .card:hover {
-    transform: translateY(-10px);
+    transform: translateX(-10px);
 }
 
 .card-header {
